added the main image

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 <title>Portfolio</title>
+<link rel="stylesheet" href="./Assets/css/style.css">
+</head>
+<img src="background.jpg" alt="background image" width:50% height:100px;>
+<!-- <figcaption class="hero"></figcaption> -->
 <h1>About me</h1>
 <body>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -13,7 +17,7 @@
 <h1>Work</h1>
 <h1>Contact me</h1>
 </body>
-</head>
+
 
 
 
