--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <title>Portfolio</title>
 <link rel="stylesheet" href="./Assets/css/style.css">
 </head>
-<img src="background.jpg" alt="background image" width:50% height:100px;>
+<img src="background.jpg" alt="background image" 
+style = "width:100%;height:800px";>
 <!-- <figcaption class="hero"></figcaption> -->
 <h1>About me</h1>
 <body>
