restarted foundation W/ a partner

--- a/index.html
+++ b/index.html
@@ -1,29 +1,55 @@
-<!DOCTYPE html> 
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Portfolio</title>
-<link rel="stylesheet" href="./Assets/css/style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
-<img src="background.jpg" alt="background image" 
-style = "width:100%;height:800px";>
-<!-- <figcaption class="hero"></figcaption> -->
-<h1>About me</h1>
 <body>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    Repudiandae, est sint mollitia magni, voluptatem cumque sit dolore 
-    provident molestiae distinctio deleniti numquam commodi accusantium 
-    aspernatur quasi facere voluptatibus, 
-    explicabo sapiente?
-</p>
-<h1>Work</h1>
-<h1>Contact me</h1>
+  <header>
+    <h1>Portfolio</h1>
+    <!-- created links for the header -->
+    <nav class="Links">
+        <ul>
+            <a href="#AboutMe">About Me</a>
+            <a href="#Work">Work</a>
+            <a href="#ContactMe">Contact Me</a>
+            <a href="#Resume">Resume</a>
+        </ul>
+    </nav>
+  </header>
+
+  <!-- adding the background photo -->
+  <section class="hero-background">
+    <div>
+        <h2>Cool subtitle here!</h2>
+    </div>
+  </section> 
+
+  <main>
+    <section class="aboutMe">
+        <article class ="card-column">
+            <h2>About Me</h2>
+            <div>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                    Consectetur minus a cupiditate veniam, omnis tempora neque accusamus inventore 
+                    voluptate dolorum laboriosam nemo nihil harum tenetur vel accusantium maxime ut dolore.
+                </p>
+            </div>
+
+            <h2>Work</h2>
+
+
+            <h2>Contact Me</h2>
+        </article>
+    </section> 
+  </main>
+
 </body>
-
-
-
-
-
-
+</html>
 
 
 
