--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
   <!-- adding the background photo -->
   <section class="hero-background">
+    <IMG SRC= "./assets/images/background.jpg" alt="background"/>
     <div>
         <h2>Cool subtitle here!</h2>
     </div>
