added nav and boxes for Portfolio and cool subtitle here

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
   <!-- adding the background photo -->
   <section class="hero-background">
+    <!-- added the first cover hieu tran -->
     <IMG SRC= "./assets/images/background.jpg" alt="background"/>
     <div>
         <h2>Cool subtitle here!</h2>
