Added the contact me for the footer

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 
   <main>
     <section class="aboutMe">
-        <article class ="card-column">
             <h2>About Me</h2>
             <div>
                 <p>
@@ -41,12 +40,23 @@
                     voluptate dolorum laboriosam nemo nihil harum tenetur vel accusantium maxime ut dolore.
                 </p>
             </div>
-
+    <section class= "work">
             <h2>Work</h2>
+    </section>
 
+    <section class="Contact me">
+        <h2>Contact Me</h2>
+        <nav>
+          <ul>
+            <a href="#number">111111111</a>e</a>
+            <a href="#email">Hieuthanhtran98@yahoo.com</a>
+            <a href="#GitHub">Github</a>
+            <a href="#Twitter">Twitter</a>
+            <a href="#Spotify">Spotify</a>
+        </ul>
 
-            <h2>Contact Me</h2>
-        </article>
+        </nav>
+        
     </section> 
   </main>
 
