--- a/index.html
+++ b/index.html
@@ -1,66 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
+
 <body>
   <header>
     <h1>Portfolio</h1>
     <!-- created links for the header -->
     <nav class="Links">
-        <ul>
-            <a href="#AboutMe">About Me</a>
-            <a href="#Work">Work</a>
-            <a href="#ContactMe">Contact Me</a>
-            <a href="#Resume">Resume</a>
-        </ul>
+      <ul>
+        <a href="#AboutMe">About Me</a>
+        <a href="#Work">Work</a>
+        <a href="#ContactMe">Contact Me</a>
+        <a href="#Resume">Resume</a>
+      </ul>
     </nav>
   </header>
 
   <!-- adding the background photo -->
   <section class="hero-background">
     <!-- added the first cover hieu tran -->
-    <IMG SRC= "./assets/images/background.jpg" alt="background"/>
+    <IMG SRC="./assets/images/background.jpg" alt="background" />
     <div>
-        <h2>Cool subtitle here!</h2>
+      <h2>Cool subtitle here!</h2>
     </div>
-  </section> 
+  </section>
 
   <main>
+    <div class="vertical-line"> </div>
+    <!-- added class about me  -->
     <section class="aboutMe">
-            <h2>About Me</h2>
-            <div>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                    Consectetur minus a cupiditate veniam, omnis tempora neque accusamus inventore 
-                    voluptate dolorum laboriosam nemo nihil harum tenetur vel accusantium maxime ut dolore.
-                </p>
-            </div>
-    <section class= "work">
-            <h2>Work</h2>
-    </section>
-
-    <section class="Contact me">
+      <h2>About Me</h2>
+      <div>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+          Consectetur minus a cupiditate veniam, omnis tempora neque accusamus inventore
+          voluptate dolorum laboriosam nemo nihil harum tenetur vel accusantium maxime ut dolore.
+        </p>
+      </div>
+      <!-- added class work -->
+      <section class="container">
+        <h2>Work</h2>
+      </section>
+      <!-- added class contact me  -->
+      <section class="container">
         <h2>Contact Me</h2>
+  
         <nav>
           <ul>
-            <a href="#number">111111111</a>e</a>
-            <a href="#email">Hieuthanhtran98@yahoo.com</a>
+            <a href="#number">111111111</a>
+            <a href="#email">learning@website.com</a>
             <a href="#GitHub">Github</a>
             <a href="#Twitter">Twitter</a>
             <a href="#Spotify">Spotify</a>
-        </ul>
+          </ul>
 
         </nav>
-        
-    </section> 
+
+      </section>
   </main>
 
 </body>
+
 </html>
 
 
