the blue line works now !

--- a/index.html
+++ b/index.html
@@ -33,23 +33,21 @@
   </section>
 
   <main>
-    <div class="vertical-line"> </div>
+   
     <!-- added class about me  -->
     <section class="aboutMe">
       <h2>About Me</h2>
       <div>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-          Consectetur minus a cupiditate veniam, omnis tempora neque accusamus inventore
-          voluptate dolorum laboriosam nemo nihil harum tenetur vel accusantium maxime ut dolore.
+          As someone who enjoys coding, loves animals, and takes photography, I feel that I have a diverse range of interests and passions. My analytical and problem-solving mind is drawn to coding, while my love for animals reflects my compassionate and caring nature. I find joy in capturing the beauty of the world around me through photography, which allows me to express my creative side. Altogether, I believe that my unique combination of technical skills, empathy for animals, and artistic flair make me a well-rounded individual.
         </p>
       </div>
       <!-- added class work -->
-      <section class="container">
+      <section class="Work">
         <h2>Work</h2>
       </section>
       <!-- added class contact me  -->
-      <section class="container">
+      <section class="contactMe">
         <h2>Contact Me</h2>
   
         <nav>
