added all the photos but layout is wrong

--- a/index.html
+++ b/index.html
@@ -52,37 +52,37 @@
       </section>
       <!-- the main paige -->
       <section id="my-work" class="my-work">
-        <div class="title"><h2>My Work</h2></div>
+        <div class="title"><h2> Work</h2></div>
         <div class = "projects-grid-wrapper">
             <div class="projects-grid">
 
-                <a href="./Assets/images/beans.jpg" target="_blank" class="Surf-Report">
+              <IMG SRC="./Assets/images/beans.jpg" target="_blank" class="Surf-Report"/>
                     <div class="project-label">
-                        <h3>MERN Stack</h3>
+                        <h3>Surf Surf-Report</h3>
                         <p>HTML/CSS</p>
                     </div>
                 </a>
-                <a href="./Assets/images/coffeecup.jpg" target="_blank" class="LED Wall">
+                <IMG SRC="./Assets/images/coffeecup.jpg" target="_blank" class="LEDWall"/>
                     <div class="project-label">
-                        <h3>Node/IoT</h3>
-                        <p>JavaScript</p>
+                        <h3>LED Wall</h3>
+                        <p>Node/IoT</p>
                     </div>
                 </a>
-                <a href="./Assets/images/drinks.jpg" target="_blank" class="Calculator">
+                <IMG SRC="./Assets/images/drinks.jpg" target="_blank" class="Calculator"/>
                     <div class="project-label">
-                        <h3>React/JavaScript/CSS</h3>
+                        <h3>Calculator</h3>
                         <p>HTML/CSS/JavaScript</p>
                     </div>
                 </a>
-                <a href="./Assets/images/coffee puck.jpg" target="_blank" class="Pastel Puzzels">
+                <IMG SRC="./Assets/images/coffee puck.jpg" target="_blank" class="PastelPuzzels"/>
                     <div class="project-label">
-                        <h3>Fallout 4 Character Manager</h3>
+                        <h3>PastelPuzzels</h3>
                         <p>MERN Stack</p>
                     </div>
                 </a>
-                <a href="./Assets/images/latte art.jpg" target="_blank" class="Run Buddy">
+                <IMG SRC="./Assets/images/latte art.jpg" target="_blank" class="RunBuddy"/>
                   <div class="project-label">
-                      <h3>Prestige Worldwide</h3>
+                      <h3>Run Buddy</h3>
                       <p>HTML/CSS/JavaScript</p>
                   </div>
               </a>
